# vega

./: app.py  dod_opportunities.py  options_contracts.csv  pyproject.toml  resume_v1.csv  trading_dashboard.py
.streamlit/: secrets.toml.example
prompts/: dod_ai_analysis_prompt.txt  job_analysis_prompt.txt
resume_chroma/: chroma.sqlite3
